fix: adjusted table scroll and actions alignment [FRON-2590]

--- a/apps/provider/src/app/dashboard/accounts/dieters/expandable-table/expandable-table.component.scss
+++ b/apps/provider/src/app/dashboard/accounts/dieters/expandable-table/expandable-table.component.scss
@@ -71,7 +71,7 @@ app-dieters-expandable-table {
         min-width: 100px;
         position: sticky;
         right: 0;
-        text-align: center;
+        text-align: center !important;
         top: 0;
         width: 99px;
 
