--- a/apps/provider/src/styles/dashboard/_ccr-table.scss
+++ b/apps/provider/src/styles/dashboard/_ccr-table.scss
@@ -12,7 +12,6 @@
   }
 
   table {
-    margin-right: 120px;
     position: relative;
     overflow: visible;
     width: 100%;
